[package]
name = "wacil-bindgen"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/davnavr/wacil/"

[dependencies]
wacil-macros = { path = "wacil-macros" }

[features]
default = [ "std" ]
std = []

[workspace]
members = [
    "wacil-backend",
    "wacil-macros"
]
